--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/stevenson/practice-api#readme",
   "dependencies": {
     "app-module-path": "^2.2.0",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "express-urlrewrite": "^1.4.0",
     "express-validator": "^6.14.0",
