--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.14.0",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "nodemon": "^2.0.16",
     "winston": "^3.7.2"
   }
