--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "dependencies": {
     "app-module-path": "^2.2.0",
     "axios": "^0.27.2",
-    "chai": "^4.3.6",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
@@ -33,12 +32,15 @@
     "express-validator": "^6.14.0",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
-    "mocha": "^10.0.0",
     "moment": "^2.29.3",
     "nodemon": "^2.0.16",
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "eslint": "^8.15.0"
+    "chai": "^4.3.6",
+    "eslint": "^8.15.0",
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.0",
+    "supertest": "^6.2.3"
   }
 }
